# particles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  camera_controller.h  emitter_parameters.h  helpers.h  input.h  macros.h  particle.h  particle_emitter.h  particle_manager.h  particle_renderer.h  particle_state.h  particle_system.h  shader.h  transform.h
shaders/: simple.frag  simple.vert  update.comp
src/: camera.c  camera_controller.c  emitter_parameters.c  helpers.c  input.c  main.c  particle.c  particle_emitter.c  particle_manager.c  particle_renderer.c  particle_state.c  particle_system.c  shader.c  transform.c
